src/hotspot/share/opto/superword.cpp
@@ -1845,7 +1845,7 @@ void SuperWord::filter_packs() {
 }
 
 //------------------------------merge_packs_to_cmovd---------------------------
-// Merge CMoveD into new vector-nodes
+// Merge qualified CMoveD into new vector-nodes
 // We want to catch this pattern and subsume CmpD and Bool into CMoveD
 //
 //                   SubD             ConD
@@ -1867,11 +1867,28 @@ void SuperWord::filter_packs() {
 //                   \ v /
 //                   CMoveD
 //
+// Also clear unqualified CMove pack from the packset.
 
 void SuperWord::merge_packs_to_cmovd() {
   for (int i = _packset.length() - 1; i >= 0; i--) {
-    _cmovev_kit.make_cmovevd_pack(_packset.at(i));
+    Node_List* unused_cmove_pk = _cmovev_kit.make_cmovevd_pack(_packset.at(i));
+
+    // Clear the unused cmove pack and its related packs from superword candidate packset.
+    if (unused_cmove_pk != NULL) {
+      Node* cmove = unused_cmove_pk->at(0);
+      Node* bol = cmove->as_CMove()->in(CMoveNode::Condition);
+      if (my_pack(bol)) {
+        remove_pack(my_pack(bol));
+      }
+      Node* cmp = bol->in(1);
+      if (my_pack(cmp)) {
+        remove_pack(my_pack(cmp));
+      }
+      remove_pack(unused_cmove_pk);
+    }
+
   }
+
   #ifndef PRODUCT
     if (TraceSuperWord) {
       tty->print_cr("\nSuperWord::merge_packs_to_cmovd(): After merge");
@@ -1909,20 +1926,23 @@ Node* CMoveKit::is_CmpD_candidate(Node* def) const {
   return use;
 }
 
+// Determine if the current pack is an ideal cmove pack, and if its related packs,
+// i.e. bool node pack and cmp node pack, can be successfully merged for vectorization.
+// If yes, create a new cmove pack to substitute the old one, map all info to the
+// new pack and delete the old cmove pack and related packs from the packset.
+// If no, return immediately with the unqualified cmove pack, delete related packs from
+// the packset and clear all info as well.
 Node_List* CMoveKit::make_cmovevd_pack(Node_List* cmovd_pk) {
   Node *cmovd = cmovd_pk->at(0);
-  if (!cmovd->is_CMove()) {
+
+  if ((cmovd->Opcode() != Op_CMoveF && cmovd->Opcode() != Op_CMoveD) ||
+      pack(cmovd) != NULL /* already in the cmov pack */) {
     return NULL;
   }
-  if (cmovd->Opcode() != Op_CMoveF && cmovd->Opcode() != Op_CMoveD) {
-    return NULL;
-  }
-  if (pack(cmovd) != NULL) { // already in the cmov pack
-    return NULL;
-  }
+
   if (cmovd->in(0) != NULL) {
     NOT_PRODUCT(if(_sw->is_trace_cmov()) {tty->print("CMoveKit::make_cmovevd_pack: CMoveD %d has control flow, escaping...", cmovd->_idx); cmovd->dump();})
-    return NULL;
+    return cmovd_pk;
   }
 
   Node* bol = cmovd->as_CMove()->in(CMoveNode::Condition);
@@ -1932,11 +1952,11 @@ Node_List* CMoveKit::make_cmovevd_pack(Node_List* cmovd_pk) {
       || bol->in(0) != NULL  // BoolNode has control flow!!
       || _sw->my_pack(bol) == NULL) {
       NOT_PRODUCT(if(_sw->is_trace_cmov()) {tty->print("CMoveKit::make_cmovevd_pack: Bool %d does not fit CMoveD %d for building vector, escaping...", bol->_idx, cmovd->_idx); bol->dump();})
-      return NULL;
+    return cmovd_pk;
   }
   Node_List* bool_pk = _sw->my_pack(bol);
   if (bool_pk->size() != cmovd_pk->size() ) {
-    return NULL;
+    return cmovd_pk;
   }
 
   Node* cmpd = bol->in(1);
@@ -1946,16 +1966,16 @@ Node_List* CMoveKit::make_cmovevd_pack(Node_List* cmovd_pk) {
       || cmpd->in(0) != NULL  // CmpDNode has control flow!!
       || _sw->my_pack(cmpd) == NULL) {
       NOT_PRODUCT(if(_sw->is_trace_cmov()) {tty->print("CMoveKit::make_cmovevd_pack: CmpD %d does not fit CMoveD %d for building vector, escaping...", cmpd->_idx, cmovd->_idx); cmpd->dump();})
-      return NULL;
+    return cmovd_pk;
   }
   Node_List* cmpd_pk = _sw->my_pack(cmpd);
   if (cmpd_pk->size() != cmovd_pk->size() ) {
-    return NULL;
+    return cmovd_pk;
   }
 
   if (!test_cmpd_pack(cmpd_pk, cmovd_pk)) {
     NOT_PRODUCT(if(_sw->is_trace_cmov()) {tty->print("CMoveKit::make_cmovevd_pack: cmpd pack for CmpD %d failed vectorization test", cmpd->_idx); cmpd->dump();})
-    return NULL;
+    return cmovd_pk;
   }
 
   Node_List* new_cmpd_pk = new Node_List();
@@ -1970,7 +1990,6 @@ Node_List* CMoveKit::make_cmovevd_pack(Node_List* cmovd_pk) {
     map(cmov, new_cmpd_pk);
     map(bol, new_cmpd_pk);
     map(cmp, new_cmpd_pk);
-
     _sw->set_my_pack(cmov, new_cmpd_pk); // and keep old packs for cmp and bool
   }
   _sw->_packset.remove(cmovd_pk);
@@ -1978,7 +1997,7 @@ Node_List* CMoveKit::make_cmovevd_pack(Node_List* cmovd_pk) {
   _sw->_packset.remove(cmpd_pk);
   _sw->_packset.append(new_cmpd_pk);
   NOT_PRODUCT(if(_sw->is_trace_cmov()) {tty->print_cr("CMoveKit::make_cmovevd_pack: added syntactic CMoveD pack"); _sw->print_pack(new_cmpd_pk);})
-  return new_cmpd_pk;
+  return NULL;
 }
 
 bool CMoveKit::test_cmpd_pack(Node_List* cmpd_pk, Node_List* cmovd_pk) {
@@ -3673,6 +3692,16 @@ void SuperWord::remove_pack_at(int pos) {
     set_my_pack(s, NULL);
   }
   _packset.remove_at(pos);
+}
+
+//------------------------------remove_pack------------------------------
+// Remove the pack in the packset
+void SuperWord::remove_pack(Node_List* p) {
+  for (uint i = 0; i < p->size(); i++) {
+    Node* s = p->at(i);
+    set_my_pack(s, NULL);
+  }
+  _packset.remove(p);
 }
 
 void SuperWord::packset_sort(int n) {
